--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Arimo:400,700");
+@import "//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css";
+@import "http://fonts.googleapis.com/css?family=Roboto:400,500";
 
 html, body {
     height: 100%;
@@ -810,4 +812,67 @@ body, .sticky-footer-wrapper {
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+/*----------- SELECT SEATS PAGE ----------- */
+.screen{
+    background: black;
+    height: 2vh;
+    width: 25vw;
+    margin-top: 5%;
+    margin-bottom: 2%;
+}
+
+input.seat[type='checkbox'] {
+    -webkit-appearance:none;
+    width:40px;
+    height:40px;
+    background:white;
+    border-radius:5px;
+    border:2px solid #555;
+}
+
+*:focus{
+    outline: none;
+}
+
+input.seat[type='checkbox']:disabled {
+    background: red;
+}
+
+input.seat[type='checkbox']:checked{
+    background: green;
+}
+
+/*----------- BOOKING CONFIRMATION PAGE ----------- */
+.box > .icon { text-align: center; position: relative; }
+.box > .icon > .image { position: relative; z-index: 2; margin: auto; width: 88px; height: 88px; border: 8px solid white; line-height: 88px; border-radius: 50%; background: #63B76C; vertical-align: middle; }
+/*.box > .icon:hover > .image { background: #333; }*/
+.box > .icon > .image > i { font-size: 36px !important; color: #fff !important; }
+.box > .icon:hover > .image > i { color: white !important; }
+.box > .icon > .info { margin-top: -24px; background: rgba(0, 0, 0, 0.04); border: 1px solid #e0e0e0; padding: 15px 0 10px 0; }
+/*.box > .icon:hover > .info { background: rgba(0, 0, 0, 0.04); border-color: #e0e0e0; color: white; }*/
+.box > .icon > .info > h3.title { font-family: "Roboto",sans-serif !important; font-size: 16px; color: #222; font-weight: 500; }
+.box > .icon > .info > p { font-family: "Roboto",sans-serif !important; font-size: 13px; color: #666; line-height: 1.5em; margin: 20px;}
+.box > .icon:hover > .info > h3.title, .box > .icon:hover > .info > p, .box > .icon:hover > .info > .more > a { color: #222; }
+.box > .icon > .info > .more a { font-family: "Roboto",sans-serif !important; font-size: 12px; color: #222; line-height: 12px; text-transform: uppercase; text-decoration: none; }
+.box > .icon:hover > .info > .more > a { color: #fff; padding: 6px 8px; background-color: #63B76C; }
+.box .space { height: 30px; }
+
+ul{
+    list-style-type: none;
+}
+
+.conf_seats{
+    margin-right: 8%;
+    margin-bottom: -3%;
+    margin-top: -3%;
+}
+
+.box{
+    margin-top: 5%;
+}
+
+.info .title{
+    margin-top: 5%;
 }
