--- a/src/main/resources/templates/bookings.html
+++ b/src/main/resources/templates/bookings.html
@@ -39,7 +39,6 @@
                         <thead>
                         <tr>
                             <th scope="col">Movie Name</th>
-                            <th scope="col">Movie Language</th>
                             <th scope="col">Date & Time</th>
                             <th scope="col">Duration</th>
                             <th scope="col">Seats</th>
@@ -54,8 +53,7 @@
                         </thead>
                         <tbody>
                         <tr th:each="booking: ${bookings}">
-                            <td th:text="${booking.moviePlan.movie.type} ? ${booking.moviePlan.movie.movieDetails.name} + ' : 3D' : ${movie.movieDetails.name} + ' : 2D'"></td>
-                            <td th:text="${booking.moviePlan.movie.movieDetails.language}"></td>
+                            <td th:text="${booking.moviePlan.movie.type} ? ${booking.moviePlan.movie.movieDetails.name} + ' : 3D' : ${booking.moviePlan.movie.movieDetails.name} + ' : 2D'"></td>
                             <td th:text="${booking.moviePlan.date_time}"></td>
                             <td th:text="${booking.moviePlan.movie.movieDetails.duration_minutes}"></td>
                             <td>
@@ -71,7 +69,7 @@
 
                             <td>
                                 <!-- Button edit -->
-                                <a th:href="'/edit-booking/' + ${booking.booking_id}" class="btn btn-primary edit-delete">Edit</a>
+                                <a th:href="'/edit-booking/' + ${booking.booking_id}" class="btn empty-button">Edit</a>
                                 <!-- Button delete -->
                                 <a th:href="'/delete-booking/' + ${booking.booking_id}" class="btn btn-danger edit-delete">Delete</a>
                             </td>
