--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -72,7 +72,7 @@
                                     <!-- Role -->
                                     <label>Role</label>
                                     <select th:field="${newUser.role}" class="form-control mb-4">
-                                        <option value="ROLE_MANAGER"> USER</option>
+                                        <option value="ROLE_MANAGER"> MANAGER</option>
                                         <option value="ROLE_EMPLOYEE"> EMPLOYEE</option>
                                     </select>
                                 </div>
