--- a/src/main/resources/templates/control-panel.html
+++ b/src/main/resources/templates/control-panel.html
@@ -26,24 +26,12 @@
 <div class="d-flex flex-column sticky-footer-wrapper">
 <!--Insert header fragment-->
 <div th:insert="~{/fragments/header :: header}"></div>
-<div sec:authorize="hasAnyRole('ROLE_EMPLOYEE', 'ROLE_MANAGER')">
-    This content is only shown to employees and managers.
-</div>
-
-<div sec:authorize="hasRole('ROLE_MANAGER')">
-    This content is only shown to managers.
-</div>
-
-<div sec:authorize="hasRole('ROLE_EMPLOYEE')">
-    This content is only shown to employees.
-</div>
 <!-- Page content here -->
 <div class="container flex-fill">
     <div class="box">
         <div class="container">
             <div class="row">
-
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" sec:authorize="hasAnyRole('ROLE_EMPLOYEE', 'ROLE_MANAGER')">
                     <div class="box-part text-center">
                         <i class="fas fa-film fa-2x" aria-hidden="true"></i>
 
@@ -59,39 +47,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                    <div class="box-part text-center">
-                        <i class="fas fa-film fa-2x" aria-hidden="true"></i>
-
-                        <div class="title">
-                            <h3>Theater Rooms</h3>
-                        </div>
-                        <hr>
-                        <div class="manage-btn">
-                            <a th:href="@{/theater-room}">Manage Theater Rooms</a>
-                            <a th:href="@{/add-theater-room}">Add Theater Room</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                    <div class="box-part text-center">
-                        <i class="fas fa-film fa-2x" aria-hidden="true"></i>
-
-                        <div class="title">
-                            <h3>Users</h3>
-                        </div>
-                        <hr>
-                        <div class="manage-btn">
-                            <a th:href="@{/users}">Manage Users</a>
-                            <a th:href="@{/add-user}">Add User</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" sec:authorize="hasAnyRole('ROLE_EMPLOYEE', 'ROLE_MANAGER')">
                     <div class="box-part text-center">
                         <i class="fas fa-film fa-2x" aria-hidden="true"></i>
 
@@ -106,7 +62,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" sec:authorize="hasAnyRole('ROLE_EMPLOYEE', 'ROLE_MANAGER')">
                     <div class="box-part text-center">
                         <i class="fas fa-film fa-2x" aria-hidden="true"></i>
 
@@ -116,7 +72,41 @@
                         <hr>
                         <div class="manage-btn">
                             <a th:href="@{/bookings}">Manage Bookings</a>
-                            <a th:href="@{/movies}">Add Booking</a>
+                            <a th:href="@{/add-booking}">Add Booking</a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" sec:authorize="hasRole('ROLE_MANAGER')">
+                    <div class="box-part text-center">
+                        <i class="fas fa-film fa-2x" aria-hidden="true"></i>
+
+                        <div class="title">
+                            <h3>Theater Rooms</h3>
+                        </div>
+                        <hr>
+                        <div class="manage-btn">
+                            <a th:href="@{/theater-room}">Manage Theater Rooms</a>
+                            <a th:href="@{/add-theater-room}">Add Theater Room</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" sec:authorize="hasRole('ROLE_MANAGER')">
+                    <div class="box-part text-center">
+                        <i class="fas fa-film fa-2x" aria-hidden="true"></i>
+
+                        <div class="title">
+                            <h3>Users</h3>
+                        </div>
+                        <hr>
+                        <div class="manage-btn">
+                            <a th:href="@{/users}">Manage Users</a>
+                            <a th:href="@{/add-user}">Add User</a>
                         </div>
                     </div>
                 </div>
