--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="form-group">
                         <label for="password">Password:</label><br>
-                        <input type="text" name="password" id="password" class="form-control">
+                        <input type="password" name="password" id="password" class="form-control">
                     </div>
                     <div class="form-group text-center">
                         <a th:href="@{/}" class="btn btn-light">Home</a>
