--- a/src/main/resources/templates/select-seats.html
+++ b/src/main/resources/templates/select-seats.html
@@ -55,9 +55,13 @@
                         </div>
                     </div>
                     <input type="hidden" id="movie_plan_id" th:value="${newBooking.moviePlan.movie_plan_id}" name="movie_plan_id">
+    <label>Please enter your email:</label><br>
+    <input type="email" th:field="${newBooking.email}" required><br>
 
                     <!--Row -->
                     <!--Row column-->
+    <label>Please enter your phone number:</label><br>
+    <input type="tel" th:field="${newBooking.phone_number}" pattern="[0-9]{8}" required><br>
 
 
                     <div class="row">
@@ -114,9 +118,15 @@
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script>
+    $('.seats-checkbox').on('change', function() {
+        if($('.seats-checkbox:checked').length > 4) {
+            this.checked = false;
+        }
+    });
+
+</script>
 </body>
 </html>
