--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -30,7 +30,7 @@
 
     <!--movie-card-->
     <div class="movie-card" th:each="movie:${movies}">
-        <div class="movie-header movieName" th:style="'background:url(/images/posters/' + ${movie.movieDetails.poster} + '); background-size: cover;'">
+        <div class="movie-header movieName" th:style="'background:url(' + ${movie.movieDetails.poster} + '); background-size: cover;'">
             <div class="header-icon-container">
                 <a th:href="'/movie/' + ${movie.movie_id}">
                     <i class="material-icons header-icon"></i>
