--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -32,7 +32,7 @@
     <section class="mb-4">
         <!--Section heading-->
         <div class="col-md-12">
-            <div class="row about_content">
+            <div class="row about_content" style="margin-top: 5%">
                 <div class="col-md-6">
                     <h2 class="h1-responsive font-weight-bold text-center my-4">About us</h2>
                     <!--Section description-->
@@ -54,7 +54,7 @@
 
 
     <div class="text-center">
-        <a href="/contact" style="border-radius: 5px;" class="btn btn-default  empty-button">Contact us</a>
+        <a href="/contact" style="border-radius: 5px; margin-top: 3%" class="btn btn-default  empty-button">Contact us</a>
     </div>
     <!--Section: Contact v.2-->
 </div>
