--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -11,9 +11,8 @@
                 <div class="col-sm myCols">
                     <h5>Cinema</h5>
                     <ul>
-                        <li><a href="#">Location</a></li>
                         <li><a th:href="@{/faq}">FAQ</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a th:href="@{/contact}">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-sm myCols social-networks">
@@ -24,9 +23,8 @@
                 <div class="col-sm myCols">
                     <h5>Movies</h5>
                     <ul>
-                        <li><a href="#">Latest released</a></li>
-                        <li><a href="#">Coming soon</a></li>
-                        <li><a href="#">All genre</a></li>
+                        <li><a th:href="@{/index}">Latest released</a></li>
+                        <li><a th:href="@{/movies}">All genre</a></li>
                     </ul>
                 </div>
 
