--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -99,7 +99,7 @@
                                 <span th:text="${moviePlan.date_time}"></span>
                             </option>
                         </select>
-                        <button type="submit" class="btn empty-button">Go to seatList reservation</button>
+                        <button type="submit" class="btn empty-button">Go to seat list reservation</button>
                     </form>
                 </div>
             </div>
