--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -23,12 +23,7 @@
                 <div class="col-sm myCols">
                     <h5>Movies</h5>
                     <ul>
-<<<<<<< HEAD
-                        <li><a th:href="@{/faq}">Latest released</a></li>
-                        <li><a th:href="@{/faq}">Coming soon</a></li>
-=======
-                        <li><a th:href="@{/index}">Latest released</a></li>
->>>>>>> pages
+                        <li><a th:href="@{/index#latest-released}">Latest released</a></li>
                         <li><a th:href="@{/movies}">All genre</a></li>
                     </ul>
                 </div>
